# syringe

./: .gitignore  Cargo.toml  LICENSE
.github/workflows/: publish-crate.yml  verify-code.yml
syringe/: Cargo.toml
syringe/src/: inject.rs  lib.rs  module.rs  provider.rs  resolve.rs  select_provider.rs
syringe_derive/: Cargo.toml
