[package]
name = "syringe"
description = "A compile-time dependency injection framework for Rust"
version = "0.0.0"
edition = "2021"
repository = "https://github.com/aburkhalter512/syringe"
license = "MIT"
keywords = ["di", "dependency injection", "ioc", "inversion of control", "compile-time"]

[dependencies]
syringe_derive = { version = "~0.1.0", path = "../syringe_derive", optional = true }
