[package]
name = "syringe-di"
description = "A compile-time dependency injection framework for Rust"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/aburkhalter512/syringe"
license = "MIT"
keywords = ["di", "dependency-injection", "ioc", "inversion-of-control", "compile-time"]

[dependencies]
frunk = "0.4.0"
once_cell = "1.14.0"
# syringe_derive = { version = "~0.1.0", path = "../syringe_derive", optional = true }
